# foop

./: .gitignore  CMakeLists.txt
foop1/: CMakeLists.txt  GNUmakefile  README
foop1/client/: CMakeLists.txt  cellitem.cpp  cellitem.h  colorscheme.h  connectionDialog.cpp  connectionDialog.h  defaultcolorscheme.cpp  defaultcolorscheme.h  gameinfo.cpp  gameinfo.h  gameinfoitem.cpp  gameinfoitem.h  griditem.cpp  griditem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamedialog.cpp  newgamedialog.h  newgamedialog.ui  scene.cpp  scene.h  serverconnection.cpp  serverconnection.h  view.cpp  view.h
foop1/common/: CMakeLists.txt  QsDebugOutput.h  QsLog.cpp  QsLog.h  QsLogDest.h  abstractvariantsocket.h  board.cpp  board.h  directionmessage.cpp  directionmessage.h  gameovermessage.cpp  gameovermessage.h  identifymessage.cpp  identifymessage.h  jsonsocket.cpp  jsonsocket.h  jsonvariantsocket.cpp  jsonvariantsocket.h  message.h  messagefactory.cpp  messagefactory.h  serializable.h  snake.cpp  snake.h  statemessage.cpp  statemessage.h
foop1/server/: CMakeLists.txt  clientconnection.cpp  clientconnection.h  collisiondetection.h  collisiontransformer.cpp  collisiontransformer.h  game.cpp  game.h  gametransformer.h  main.cpp  movetransformer.cpp  movetransformer.h  prioritytransformer.cpp  prioritytransformer.h  server.cpp  server.h  walltransformer.cpp  walltransformer.h
foop1/src/: CMakeLists.txt  mainwindow.cpp
foop1/test/client/: CMakeLists.txt  jsonvariantsockettest.cpp  jsonvariantsockettest.h
foop2/: README
foop2/monticello/: Foop-Snake-jg.1.mcz  Foop-Snake-jg.10.mcz  Foop-Snake-jg.12.mcz  Foop-Snake-jg.13.mcz  Foop-Snake-jg.14.mcz  Foop-Snake-jg.15.mcz  Foop-Snake-jg.16.mcz  Foop-Snake-jg.2.mcz  Foop-Snake-jg.3.mcz  Foop-Snake-jg.4.mcz  Foop-Snake-jg.5.mcz  Foop-Snake-jg.6.mcz  Foop-Snake-jg.7.mcz  Foop-Snake-jg.8.mcz  Foop-Snake-jg.9.mcz  Foop-Snake-ml.11.mcz  Foop-Snake-mo.17.mcz  SnakeGame-jg.10.mcz  SnakeGame-jg.11.mcz  SnakeGame-jg.12.mcz  SnakeGame-jg.13.mcz  SnakeGame-jg.14.mcz  SnakeGame-jg.2.mcz  SnakeGame-jg.3.mcz  SnakeGame-jg.4.mcz  SnakeGame-jg.5.mcz  SnakeGame-jg.6.mcz  SnakeGame-jg.7.mcz  SnakeGame-jg.8.mcz  SnakeGame-jg.9.mcz  SnakeGame-ml.15.mcz  SnakeGame-mo.16.mcz  SnakeGame-mo.17.mcz  SnakeGame-mo.18.mcz
foop3/: account.e  application.e  foop3.ecf  inputreader.e  person.e  personfactory.e  senior.e  senior_account.e  student.e  student_account.e  theoriefragen.txt
foop3/commands/: command.e  exit.e  new_account.e  newcustomer.e  notfound.e
foop3/factories/: account_factory.e
misc/: pre-commit
protocol/: Makefile  foop.tex
